<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/hint_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/usage_hint_0"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        android:textColor="@color/grayText"
        />

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:id="@+id/hint_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/ic_type"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/grayText"
                android:text="@string/usage_hint_1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hint_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint_1"
            android:layout_alignLeft="@+id/hint_1"
            android:layout_alignStart="@+id/hint_1"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_barcode"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/grayText"
                android:text="@string/usage_hint_2"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hint_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint_2"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_bluetooth_black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/grayText"
                android:text="@string/usage_hint_3"
                />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>