<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.createevent.CreateEventFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/linearLayoutCreateEventButtons"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:scrollbarStyle="outsideOverlay"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="12dp"
                >

                <TextView
                    android:id="@+id/textViewCreateEventNameLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:textSize="17sp"
                    android:text="@string/name"
                    />

                <TextView
                    android:id="@+id/textViewCreateEventNameValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    tools:text="RISING LIGHT LEADER TRIBE"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="12dp"
                >

                <TextView
                    android:id="@+id/textViewCreateEventIdsLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:textSize="17sp"
                    android:text="@string/ids"
                    />

                <TextView
                    android:id="@+id/textViewCreateEventIdsValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    tools:text="123456789012345"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="12dp"
                android:background="?android:listDivider"
                />

            <Spinner
                android:id="@+id/spinnerCreateEventEventType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:spinnerMode="dialog"
                android:entries="@array/event_type_array"
                />

            <LinearLayout
                android:id="@+id/linearLayoutCreateEventEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:visibility="gone"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCreateEventEventDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/event_date"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCreateEventEventDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageViewCreateEventClearEventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_clear"
                    android:tint="@android:color/black"
                    />

            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/linearLayoutCreateEventDangerEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:visibility="gone"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCreateEventDangerEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/danger_end_date"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCreateEventDangerEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageViewCreateEventClearDangerEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_clear"
                    android:tint="@android:color/black"
                    />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerCreateEventVaccines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:spinnerMode="dialog"
                android:visibility="gone"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCreateEventVeterinarianCertificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/veterinarian_certificate"
                android:visibility="gone"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCreateEventVeterinarianCertificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCreateEventNextVaccineDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:visibility="gone"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCreateEventNextVaccineDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/next_vaccine_date"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCreateEventNextVaccineDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageViewCreateEventClearNextVaccineDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_clear"
                    android:tint="@android:color/black"
                    />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxCreateEventKeptAbroad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/kept_abroad"
                android:visibility="gone"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCreateEventCountryIsoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/countryIsoCode"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCreateEventCountryIsoCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCreateEventAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewCreateEventAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="12dp"
                    android:inputType="textMultiLine"
                    android:hint="@string/addressFind"
                    />

                <ImageView
                    android:id="@+id/imageViewCreateEventClearAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_clear"
                    android:tint="@android:color/black"
                    />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCreateEventCountryAddressDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/addressDetails"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCreateEventCountryAddressDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCreateEventComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/comments"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCreateEventComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutCreateEventButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreateEventEventSave"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            app:cornerRadius="0dp"
            android:text="@string/save"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreateEventEventCancel"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            app:cornerRadius="0dp"
            android:text="@string/cancel"
            />

    </LinearLayout>

</RelativeLayout>